--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,91 @@
-
+<!-- NIROVI NAV BAR FOR LARGE SCREEN -->
 <nav
   class="fixed flex justify-between py-4 w-full lg:px-48 md:px-12 px-4 content-center bg-secondary z-10"
 >
   <div class="flex items-center">
-    <img src="assets/images/nirovi2.png" alt="Logo" width="150" height="150"/>
+    <img src="assets/images/nirovi.png" alt="Logo" width="150" height="150" />
   </div>
   <ul class="font-montserrat items-center hidden md:flex">
     <li class="mx-3">
-      <a class="growing-underline" href="howitworks"> Home </a>
+      <a class="growing-underline cursor-pointer" (click)="navigate(home)">
+        Home
+      </a>
     </li>
-    <li class="growing-underline mx-3">
-      <a href="features">Service</a>
+    <li class="growing-underline mx-3 cursor-pointer">
+      <a (click)="navigate(service)">Service</a>
     </li>
-    <li class="growing-underline mx-3">
-      <a href="pricing">About</a>
+    <li class="growing-underline mx-3 cursor-pointer">
+      <a (click)="navigate(rooms)">Rooms</a>
     </li>
-    <li class="growing-underline mx-3">
-      <a href="pricing">Contact us</a>
+    <li class="growing-underline mx-3 cursor-pointer">
+      <a (click)="navigate(contact)">Contact us</a>
     </li>
   </ul>
   <!-- <div class="font-montserrat hidden md:block">
     <button class="mr-6">Login</button>
     <button class="py-2 px-4 text-white bg-black rounded-3xl">Signup</button>
   </div> -->
-  <div id="showMenu" class="md:hidden">
+  <div id="showMenu" class="md:hidden" (click)="openMobileNav()">
     <img src=" assets/logos/Menu.svg" alt="Menu icon" />
   </div>
 </nav>
+
 <div
-  id="mobileNav"
-  class="hidden px-4 py-6 fixed top-0 left-0 h-full w-full bg-secondary z-20 animate-fade-in-down"
+  *ngIf="showMenu"
+  class="px-4 py-6 fixed top-0 left-0 h-full w-full bg-secondary z-20 animate-fade-in-down"
 >
-  <div id="hideMenu" class="flex justify-end">
+  <div id="hideMenu" class="flex justify-end" (click)="closeMobileNav()">
     <img src="assets/logos/Cross.svg" alt="" class="h-16 w-16" />
   </div>
-  <ul class="font-montserrat flex flex-col mx-8 my-24 items-center text-3xl">
-    <li class="my-6">
-      <a href="howitworks">Home</a>
+  <ul class="font-raleway flex flex-col mx-8 my-24 items-center text-2xl">
+    <li id="hideMenu" class="my-6">
+      <a (click)="navigate(home); closeMobileNav()">Home</a>
     </li>
     <li class="my-6">
-      <a href="features">Service</a>
+      <a id="hideMenu" (click)="navigate(service); closeMobileNav()">Service</a>
     </li>
     <li class="my-6">
-      <a href="pricing">About</a>
+      <a id="hideMenu" (click)="navigate(rooms); closeMobileNav()">Rooms</a>
     </li>
     <li class="my-6">
-      <a href="pricing">Contact us</a>
+      <a id="hideMenu" (click)="navigate(contact); closeMobileNav()"
+        >Contact us</a
+      >
     </li>
   </ul>
 </div>
 
-<!-- Hero -->
+<!-- HOME SECTION -->
 <section
-  class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary"
+  class="pt-24 md:mt-0 md:h-screen flex flex-col justify-center text-center md:text-left md:flex-row md:justify-between md:items-center lg:px-48 md:px-12 px-4 bg-secondary snap-mandatory snap-y snap-center"
+  [@fadeInOut]
+  #home
 >
   <div class="md:flex-1 md:mr-10">
-    <h1 class="font-pt-serif text-5xl font-bold mb-7">
-      A headline for your
-      <span class="bg-underline1 bg-left-bottom bg-no-repeat pb-2 bg-100%">
-        cool website
+    <h1 class="font-pt-serif text-4xl font-bold mb-7 leading-normal">
+      Welcome to Nirovi Lodge -
+      <span class="bg-left-bottom bg-no-repeat pb-5 bg-100% tracking-wider">
+        Where Tranquility Meets Luxury!
       </span>
     </h1>
-    <p class="font-pt-serif font-normal mb-7">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum
-      tempore consectetur voluptas, cumque nobis laboriosam voluptatem.
+    <p class="font-raleway font-normal mb-7">
+      Experience nature's embrace and indulge in a world of serenity.
     </p>
-    <!-- <div class="font-montserrat">
-      <button
-        class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2"
+    <div class="font-montserrat">
+      <a
+        (click)="navigate(service)"
+        class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2 cursor-pointer"
       >
-        Call to action
-      </button>
-      <button class="px-6 py-4 border-2 border-black border-solid rounded-lg">
-        Secondary action
-      </button>
-    </div> -->
+        Services
+      </a>
+
+      <a
+        (click)="navigate(contact)"
+        class="px-6 py-4 border-2 border-black border-solid rounded-lg cursor-pointer"
+      >
+        Contact us
+      </a>
+    </div>
   </div>
   <div class="flex justify-around md:block mt-8 md:mt-0 md:flex-1">
     <div class="relative">
@@ -84,7 +95,7 @@
         class="absolute -top-16 -left-10"
       />
     </div>
-    <img src="assets/images/bed.webp" alt="Macbook" />
+    <img src="assets/images/receiption.webp" alt="Macbook" />
     <div class="relative w-full">
       <img
         src="assets/icons/Highlight2.svg"
@@ -95,10 +106,10 @@
   </div>
 </section>
 
-<!-- How it works -->
-<section class="bg-black text-white sectionSize">
+<!-- SERVICE SECTION -->
+<section class="bg-black text-white sectionSize" [@fadeInOut] #service>
   <div>
-    <h2 class="secondaryTitle bg-underline2 bg-100%">Home</h2>
+    <h2 class="secondaryTitle bg-underline2 bg-100%">Services</h2>
   </div>
   <div class="flex flex-col md:flex-row">
     <div class="flex-1 mx-8 flex flex-col items-center my-4">
@@ -138,7 +149,7 @@
 </section>
 
 <!-- Features -->
-<section class="sectionSize bg-secondary">
+<!-- <section class="sectionSize bg-secondary">
   <div>
     <h2 class="secondaryTitle bg-underline3 bg-100%">Features</h2>
   </div>
@@ -195,21 +206,30 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
-<!-- Pricing -->
-<section class="sectionSize bg-primary py-0">
+<!-- ROOMS -->
+<section class="sectionSize bg-primary py-0" #rooms>
   <div>
-    <h2 class="secondaryTitle bg-underline4 mb-0 bg-100%">Pricing</h2>
+    <h2 class="secondaryTitle bg-underline4 mb-0 bg-100% pt-5">Rooms</h2>
   </div>
-  <div class="flex w-full flex-col md:flex-row">
+
+  <div class="container w-1/2 drop-shadow-lg bg-secondary my-3 rounded-md">
+  <div class="flex justify-center w-full "><img src="assets//images/bed.webp" alt="" width="250"  class="p-5"></div>
+
+  <div class="px-5 font-raleway text-center mb-[2rem]">
+   <span class="font-bold"> Description:</span> Self Container, Television, Azam TV, DSTV and Drinks Are Available
+  </div>
+
+  </div>
+  <!-- <div class="flex w-full flex-col md:flex-row">
     <div
       class="flex-1 flex flex-col mx-6 shadow-2xl relative bg-secondary rounded-2xl py-5 px-8 my-8 md:top-24"
     >
-      <h3 class="font-pt-serif font-normal text-2xl mb-4">The Good</h3>
+      <h3 class="font-pt-serif font-normal text-2xl mb-4">Standard</h3>
       <div class="font-montserrat font-bold text-2xl mb-4">
-        $25
-        <span class="font-normal text-base"> / month</span>
+        25,000
+        <span class="font-normal text-base"> / Day</span>
       </div>
 
       <div class="flex">
@@ -225,17 +245,17 @@
         <p>Benefit #3</p>
       </div>
 
-      <button
-        class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-4"
+      <!-- <button
+        class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-4 hover:bg-black hover:text-white"
       >
-        Choose plan
-      </button>
+        Book Now
+      </button> --
     </div>
 
     <div
       class="flex-1 flex flex-col mx-6 shadow-2xl relative bg-secondary rounded-2xl py-5 px-8 my-8 md:top-12"
     >
-      <h3 class="font-pt-serif font-normal text-2xl mb-4">The Bad</h3>
+      <h3 class="font-pt-serif font-normal text-2xl mb-4">VIP</h3>
       <div class="font-montserrat font-bold text-2xl mb-4">
         $40
         <span class="font-normal text-base"> / month</span>
@@ -248,19 +268,19 @@
       <div class="flex">
         <img src="assets/logos/CheckedBox.svg" alt="" class="mr-1" />
         <p>Benefit #2</p>
-      </div>
+      </div> 
       <div class="flex">
         <img src="assets/logos/CheckedBox.svg" alt="" class="mr-1" />
         <p>Benefit #3</p>
       </div>
 
-      <button
-        class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-4"
+      <!-- <button
+        class="border-2 border-solid border-black rounded-xl text-lg py-3 mt-4 hover:bg-black hover:text-white"
       >
-        Choose plan
-      </button>
+        Book Now
+      </button> --
     </div>
-
+    <!-- 
     <div
       class="flex-1 flex flex-col mx-6 shadow-2xl relative bg-secondary rounded-2xl py-5 px-8 my-8 md:top-24"
     >
@@ -288,19 +308,48 @@
       >
         Choose plan
       </button>
-    </div>
-  </div>
+    </div> --
+  </div> -->
 </section>
 
-<!-- FAQ  -->
-<section class="sectionSize items-start pt-8 md:pt-36 bg-black text-white">
-  <div>
+<!-- Contact us  -->
+<section
+  class="sectionSize items-start pt-8 md:pt-36 bg-black text-white"
+  [@fadeInOut]
+  #contact
+>
+  <div class="mb-4">
     <h2 class="secondaryTitle bg-highlight3 p-10 mb-0 bg-center bg-100%">
-      FAQ
+      Contact us
     </h2>
   </div>
-
-  <div toggleElement class="w-full py-4">
+  <div class="grid grid-cols-2 md:grid-cols-2 w-full mt-4">
+    <div>
+      <div>
+        <h1 class="font-bold tracking-wider text-xl">Location</h1>
+      </div>
+      <div class="font-raleway">
+        <ul>
+          <li>- Kinyerezi</li>
+          <li>- Tabata Mawenzi</li>
+          <li>- Tabata Bima</li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <div>
+        <h1 class="font-bold tracking-wider text-xl">Contact</h1>
+      </div>
+      <div class="font-raleway">
+        <ul>
+          <li>+255 700 000</li>
+          <li>+255 700 000</li>
+          <li>+255 700 000</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- <div toggleElement class="w-full py-4">
     <div class="flex justify-between items-center">
       <div question class="font-montserrat font-medium mr-auto">
         Where can I get this HTML template?
@@ -315,9 +364,9 @@
       You can download it on Gumroad.com
     </div>
   </div>
-  <hr class="w-full bg-white" />
+  <hr class="w-full bg-white" /> -->
 
-  <div toggleElement class="w-full py-4">
+  <!-- <div toggleElement class="w-full py-4">
     <div class="flex justify-between items-center">
       <div question class="font-montserrat font-medium mr-auto">
         Is this HTML template free?
@@ -331,8 +380,8 @@
     <div answer class="font-montserrat text-sm font-extralight pb-8 hidden">
       Yes! For you it is free.
     </div>
-  </div>
-  <hr class="w-full bg-white" />
+  </div> -->
+  <!-- <hr class="w-full bg-white" />
 
   <div toggleElement class="w-full py-4">
     <div class="flex justify-between items-center">
@@ -349,13 +398,13 @@
       Yes! No doubt about it.
     </div>
   </div>
-  <hr class="w-full bg-white" />
+  <hr class="w-full bg-white" /> -->
 </section>
 
 <!-- Footer -->
 <section class="bg-black sectionSize">
   <div class="mb-4">
-    <img src="assets/icons/Logo_white.svg" alt="Logo" class="h-4" />
+    <img src="assets/images/nirovi2.png" alt="Logo" class="h-4" />
   </div>
   <div class="flex mb-8">
     <a href="#">
@@ -372,6 +421,21 @@
     </a>
   </div>
   <div class="text-white font-montserrat text-sm">
-    © {{currentYear}} NIROVI LODGE. All rights reserved
+    © {{ currentYear }} NIROVI LODGE. All rights reserved
   </div>
 </section>
+
+<!-- <div>
+  <button (click)="scrollToSection(section1)">Section 1</button>
+  <button (click)="scrollToSection(section2)">Section 2</button>
+  <button (click)="scrollToSection(section3)">Section 3</button>
+  <button (click)="scrollToSection(section4)">Section 4</button>
+</div>
+
+<div #section1 class="h-screen">section 1</div>
+
+<div #section2 class="h-screen">section 2</div>
+
+<div #section3 class="h-screen">Content for Section 3</div> -->
+<!-- 
+<div #section4 class="h-screen">Content for Section 4</div> -->
