--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,15 @@
-.home{
-    background-color: #b4d2e7;
-}
-.about{
-    background-color: #a1a6b4;
-}
-.service{
-    background-color: #94c5cc;  
-}
-.contact{
-    background-color: #94c5cc;  
-}
+// .home{
+//     background-color: #b4d2e7;
+// }
+// .about{
+//     background-color: #a1a6b4;
+// }
+// .service{
+//     background-color: #94c5cc;  
+// }
+// .contact{
+//     background-color: #94c5cc;  
+// }
 // .top{
 //     height: 55.5vh;
 //     width: 100%;
@@ -32,3 +32,18 @@
 //     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 //     font-size: 2rem;
 // }
+
+::ng-deep ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Background color of the scrollbar track */
+  }
+  
+  /* Customize scrollbar thumb */
+  ::ng-deep ::-webkit-scrollbar-thumb {
+    background: #888; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Border radius of the scrollbar thumb */
+  }
+  
+  /* Customize scrollbar thumb on hover */
+  ::ng-deep ::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color of the scrollbar thumb on hover */
+  }
