--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 // }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=PT+Serif:wght@400;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,100;1,400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
