--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -214,7 +214,7 @@
     <h2 class="secondaryTitle bg-underline4 mb-0 bg-100% pt-5">Rooms</h2>
   </div>
 
-  <div class="container w-1/2 drop-shadow-lg bg-secondary my-3 rounded-md">
+  <div class="container w-full md:w-1/2 drop-shadow-lg bg-secondary my-3 rounded-md">
   <div class="flex justify-center w-full "><img src="assets//images/bed.webp" alt="" width="250"  class="p-5"></div>
 
   <div class="px-5 font-raleway text-center mb-[2rem]">
