--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,9 +118,9 @@
       >
         1
       </div>
-      <h3 class="font-montserrat font-medium text-xl mb-2">Eat</h3>
+      <h3 class="font-montserrat font-medium text-xl mb-2">Accommodation</h3>
       <p class="text-center font-montserrat">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Comfortable rooms, suites, cottages, or villas with various bed configurations.
       </p>
     </div>
     <div class="flex-1 mx-8 flex flex-col items-center my-4">
@@ -129,9 +129,9 @@
       >
         2
       </div>
-      <h3 class="font-montserrat font-medium text-xl mb-2">Sleep</h3>
+      <h3 class="font-montserrat font-medium text-xl mb-2">Concierge and Guest Services</h3>
       <p class="text-center font-montserrat">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        24/7 front desk and concierge service to assist guests with inquiries, reservations, and local recommendations.
       </p>
     </div>
     <div class="flex-1 mx-8 flex flex-col items-center my-4">
@@ -140,9 +140,9 @@
       >
         3
       </div>
-      <h3 class="font-montserrat font-medium text-xl mb-2">Rave</h3>
+      <h3 class="font-montserrat font-medium text-xl mb-2">Environmental Initiatives</h3>
       <p class="text-center font-montserrat">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Lodges located in eco-sensitive areas often promote sustainable practices and nature conservation
       </p>
     </div>
   </div>
@@ -214,13 +214,17 @@
     <h2 class="secondaryTitle bg-underline4 mb-0 bg-100% pt-5">Rooms</h2>
   </div>
 
-  <div class="container w-full md:w-1/2 drop-shadow-lg bg-secondary my-3 rounded-md">
-  <div class="flex justify-center w-full "><img src="assets//images/bed.webp" alt="" width="250"  class="p-5"></div>
+  <div
+    class="container w-full md:w-1/2 drop-shadow-lg bg-secondary my-3 rounded-md"
+  >
+    <div class="flex justify-center w-full">
+      <img src="assets//images/bed.webp" alt="" width="250" class="p-5" />
+    </div>
 
-  <div class="px-5 font-raleway text-center mb-[2rem]">
-   <span class="font-bold"> Description:</span> Self Container, Television, Azam TV, DSTV and Drinks Are Available
-  </div>
-
+    <div class="px-5 font-raleway text-center mb-[2rem]">
+      <span class="font-bold"> Description:</span> Self Container, Television,
+      Azam TV, DSTV and Drinks Are Available
+    </div>
   </div>
   <!-- <div class="flex w-full flex-col md:flex-row">
     <div
@@ -342,9 +346,8 @@
       </div>
       <div class="font-raleway">
         <ul>
-          <li>+255 700 000</li>
-          <li>+255 700 000</li>
-          <li>+255 700 000</li>
+          <li>+255 655 981 515</li>
+          <li>+255 767 981 515</li>
         </ul>
       </div>
     </div>
