--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,42 +9,46 @@
 // }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=PT+Serif:wght@400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,100;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,100;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-    .sectionSize {
-        @apply lg:px-48 md:px-12 px-4 py-14 flex flex-col items-center;
-    }
+  .sectionSize {
+    @apply lg:px-48 md:px-12 px-4 py-14 flex flex-col items-center;
+  }
 
-    .secondaryTitle {
-        @apply font-pt-serif text-3xl bg-left-bottom bg-no-repeat pb-8 px-16 mb-8;
-    }
+  .secondaryTitle {
+    @apply font-pt-serif text-3xl bg-left-bottom bg-no-repeat pb-8 px-16 mb-8;
+  }
 }
 
 .growing-underline {
-    display: block;
-    position: relative;
-    padding: 0.2em 0;
-    overflow: hidden;
+  display: block;
+  position: relative;
+  padding: 0.2em 0;
+  overflow: hidden;
 }
 
 .growing-underline::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0.1em;
-    background-color: black;
-    transition: opacity 300ms, transform 300ms;
-    opacity: 1;
-    transform: translate3d(-100%, 0, 0);
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.1em;
+  background-color: #e0a84e;
+  transition: opacity 300ms, transform 300ms;
+  opacity: 1;
+  transform: translate3d(-100%, 0, 0);
 }
 
 .growing-underline:hover::after,
 .growing-underline:focus::after {
-    transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
