--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,30 +87,30 @@
     <div class="font-montserrat">
       <a
         (click)="navigate(service)"
-        class="bg-medium px-6 py-4 rounded-lg border-solid text-white mr-2 mb-2 cursor-pointer"
+        class="bg-medium hover:bg-black px-6 py-4 rounded-lg border-solid text-white mr-2 mb-2 cursor-pointer"
       >
         Services
       </a>
 
       <a
         (click)="navigate(contact)"
-        class="px-6 py-4 border-2 border-primary border-solid text-white rounded-lg cursor-pointer"
+        class="px-6 py-4 border-2 border-primary hover:bg-primary border-solid text-white rounded-lg cursor-pointer"
       >
         Contact us
       </a>
     </div>
     <div
       *ngIf="isScrolled"
-      class="fixed flex bottom-0 right-0 mr-5 mb-5 border-2 border-primary p-2 w-9 h-9 text-center items-center rounded-full z-10 animate-bounce"
+      class="fixed flex bottom-0 right-0 mr-5 mb-5 border-2 border-primary bg-primary p-2 w-9 h-9 text-center items-center rounded-full z-10 animate-bounce"
       (click)="backToTheTop()"
     >
       <fa-icon
         [icon]="faArrowUp"
-        class="text-secondary transition duration-500 ease-in text-lg hover:text-primary"
+        class="text-white text-lg "
       ></fa-icon>
     </div>
   </div>
-  <div
+  <!-- <div
     *ngIf="isScrolled"
     class="fixed flex bottom-0 right-0 mr-5 mb-5 border-2 border-primary p-2 w-9 h-9 text-center items-center rounded-full z-10 animate-bounce"
     (click)="backToTheTop()"
@@ -119,7 +119,7 @@
       [icon]="faArrowUp"
       class="text-secondary transition duration-500 ease-in text-lg hover:text-primary"
     ></fa-icon>
-  </div>
+  </div> -->
   <!-- <div class="flex justify-around md:block mt-8 md:mt-0 md:flex-1">
     <div class="relative">
       <img
@@ -192,21 +192,22 @@
 <owl-carousel-o [options]="galleryOptions" (translated)="getPassedData($event)">
   <ng-container *ngFor="let photo of photos; let i = index">
     <ng-template carouselSlide [id]="photo.id">
-      <img [src]="photo.url" />
+      <img [src]="photo.url"  loading="lazy"/>
     </ng-template>
   </ng-container>
 </owl-carousel-o>
 
 <!-- ROOMS -->
-<section class="lg:px-48 md:px-12 px-4 py-0" #rooms>
+<section class="lg:px-48 md:px-12 px-4 pt-0 pb-5" #rooms>
   <div>
     <h2 class="secondaryTitle text-center mb-0 bg-100% pt-5">Rooms</h2>
   </div>
   <owl-carousel-o [options]="roomsOptions">
-    <ng-container *ngFor="let photo of photos; let i = index">
-      <ng-template carouselSlide [id]="photo.id">
-        <div class="h-96 border-2 p-5">
-          
+    <ng-container *ngFor="let room of roomTypes">
+      <ng-template carouselSlide [id]="room.id">
+      <div class="h-[30rem]  p-5  relative rounded-md bg-cover bg-center hover:bg-gray-300 transition duration-300 ease-in-out" [style.background-image]="'url(' + room.photo + ')'">
+        <div class="absolute top-0 left-0 w-1/2 bg-primary p-3 rounded-tl-md font-raleway leading-6">{{room.price}}</div>
+        <div class="absolute bottom-0 w-full bg-primary left-0 text-center p-3 rounded-b-md font-montserrat font-bold text-white">{{room.roomType}}</div>
         </div>
       </ng-template>
     </ng-container>
@@ -251,11 +252,17 @@
 </section>
 
 <!-- Footer -->
-<section class="sectionSize bg-medium">
-  <div class="mb-4">
-    <img src="assets/images/nirovi2.png" alt="Logo" class="h-4" />
-  </div>
-  <div class="flex mb-8">
+<section class="lg:px-48 md:px-12 px-4 py-5 flex flex-col items-center bg-medium">
+  <div
+  class="flex items-center uppercase font-varela font-extrabold text-2xl leading-7"
+>
+  <!-- <img src="assets/images/nirovi.png" alt="Logo" width="150" height="150" /> -->
+  <h1>
+    <span class="text-white">nirovi </span
+    ><span class="text-primary"> lodge</span>
+  </h1>
+</div>
+  <!-- <div class="flex mb-8">
     <a href="#">
       <img src="assets/logos/Facebook.svg" alt="Facebook logo" class="mx-4" />
     </a>
@@ -268,8 +275,11 @@
     <a href="#">
       <img src="assets/logos/Twitter.svg" alt="Twitter logo" class="mx-4" />
     </a>
+  </div> -->
+  <div class="text-white font-montserrat text-sm my-2">
+  Design by: robinsonanthony1505@gmail.com
   </div>
   <div class="text-white font-montserrat text-sm">
-    © {{ currentYear }} NIROVI LODGE. All rights reserved
+    © {{ currentYear }} All rights reserved 
   </div>
 </section>
