--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,15 @@
 .growing-underline:focus::after {
   transform: translate3d(0, 0, 0);
 }
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #e0a84e;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.5);
+}
