Working add Lodge and and reading Lodge

--- a/src/app/modules/dashboard/components/lodges/table/table.component.html
+++ b/src/app/modules/dashboard/components/lodges/table/table.component.html
@@ -17,8 +17,8 @@
       Add Lodge
     </button>
   </div>
-  <div *ngIf="addLodge" class="animate-fade-in-down transition duration-700 ease-in-out">
-    <app-add-lodge></app-add-lodge>
+  <div *ngIf="closeLodge" class="animate-fade-in-down transition duration-700 ease-in-out">
+    <app-add-lodge> </app-add-lodge>
   </div>
   <div class="relative overflow-x-auto">
     <table class="w-full table-auto" matSort (matSortChange)="sortData($event)">
@@ -26,9 +26,9 @@
       <thead class="text-xs uppercase text-gray-400 dark:text-night-300">
         <tr>
           <th class="py-3 text-left">Lodge</th>
-          <th mat-sort-header="instant_price" class="py-3 text-right">Rooms</th>
-          <th mat-sort-header="price" class="py-3 text-right">Employee</th>
-          <th mat-sort-header="last_bid" class="py-3 text-right">Guests</th>
+          <th mat-sort-header="instant_price" class="py-3 text-right">Description</th>
+          <!-- <th mat-sort-header="price" class="py-3 text-right">Employee</th>
+          <th mat-sort-header="last_bid" class="py-3 text-right">Guests</th> -->
 
           <th class="py-3 text-right">View</th>
         </tr>
@@ -37,8 +37,8 @@
       <!--Table body-->
       <tbody>
         <tr
-          *ngFor="let auction of activeAuction"
-          [auction]="auction"
+          *ngFor="let lodge of lodges$ | async"
+          [lodge]="lodge"
           lodge-table-item
           class="border-b border-dashed border-gray-200 hover:bg-gray-100 dark:border-night-500 dark:hover:bg-night-600"
         ></tr>
