--- a/src/app/modules/dashboard/components/lodges/add-lodge/add-lodge.component.html
+++ b/src/app/modules/dashboard/components/lodges/add-lodge/add-lodge.component.html
@@ -1,41 +1,64 @@
-<form action="">
-  <div class="grid grid-cols-1 gap-4 text-left md:grid-cols-3 ">
+<form action="" [formGroup]="lodgeForm" (ngSubmit)="saveLodge()" *ngIf="closeLodge">
+  <div class="grid grid-cols-1 gap-4 text-left md:grid-cols-3">
     <div class="relative">
-      <input type="text" id="email" class="peer block" placeholder=" " />
-      <label
-        for="email"
-        class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200"
+      
+        <label
+        for="city"
+        class="absolute left-1 top-2 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200"
       >
         City
       </label>
+      
+      
+        <input
+          type="text"
+          id="password"
+          class="peer block"
+          placeholder="Dar es Salaam "
+          formControlName="city"
+        />
+      
     </div>
 
     <div class="relative">
-      <input type="password" id="password" class="peer block" placeholder=" " />
       <label
-        for="password"
-        class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200"
-      >
-        Address
-      </label>
+      for="address"
+      class="absolute left-1 top-2 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200"
+    >
+      Address
+    </label>
+      <input
+        type="text"
+        id="adress"
+        class="peer block"
+        placeholder="Tabata Kinyerezi "
+        formControlName="address"
+      />
+    
     </div>
 
     <div class="relative">
-      <input
+      <!-- <input
         type="password"
         id="confirm-password"
         class="peer block"
         placeholder=" "
-      />
+      /> -->
+      <textarea id="description" formControlName="description"></textarea>
       <label
-        for="confirm-password"
-        class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200"
+        for="description"
+        class="absolute left-1 top-2 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200"
       >
         Description
       </label>
     </div>
     <div class="relative">
-      <input type="file"  class="peer block border p-1 rounded-md focus:border focus:border-primary-600 w-full border-gray-300" placeholder=" " accept=".png,.svg,.jpg," />
+      <input
+        type="file"
+        class="peer block w-full rounded-md border border-gray-300 p-1 focus:border focus:border-primary-600"
+        (change)="onImageFileSelected($event)"
+        accept=".png,.svg,.jpg,"
+      />
       <!-- <label
         for="email"
         class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200"
@@ -44,11 +67,12 @@
       </label> -->
     </div>
   </div>
- <div class="w-full my-2">
-  <button
-  class="flex-none w-full rounded bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600 dark:bg-primary-500 dark:text-white dark:hover:bg-primary-600"
->
-  Add Lodge
-</button>
- </div>
+  <div class="my-2 w-full">
+    <button
+      class="w-full flex-none rounded bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600 dark:bg-primary-500 dark:text-white dark:hover:bg-primary-600"
+      [disabled]="lodgeForm.invalid"
+    >
+      Add Lodge
+    </button>
+  </div>
 </form>
