--- a/src/app/modules/dashboard/components/lodges/table-item/table-item.component.html
+++ b/src/app/modules/dashboard/components/lodges/table-item/table-item.component.html
@@ -1,26 +1,26 @@
 <td class="py-2 pr-2">
     <div class="flex items-center">
-      <img [src]="auction.image" class="mr-2 h-10 w-10 flex-none rounded-sm" alt="" />
+      <img src="{{apiUrl + lodge.images}}" class="mr-2 h-10 w-10 flex-none rounded-sm" alt="" />
       <div class="flex flex-col justify-items-start">
         <a href="#" class="mb-1 text-sm font-semibold text-gray-900 dark:text-night-100 dark:hover:text-primary-500">{{
-          auction.title
+          lodge.city
         }}</a>
-        <span class="text-xs font-semibold text-gray-400 dark:text-night-300">{{ auction.creator }}</span>
+        <span class="text-xs font-semibold text-gray-400 dark:text-night-300">{{ lodge.address }}</span>
       </div>
     </div>
   </td>
   <td class="py-2 pl-2 text-left">
-    <span class="text-sm font-semibold text-gray-400 dark:text-night-200  ">{{ auction.instant_price }} ETH</span>
+    <span class="text-sm font-semibold text-gray-400 dark:text-night-200  ">{{ lodge.description }} </span>
   </td>
-  <td class="py-2 pl-2 text-left">
-    <span class="text-sm font-semibold text-gray-400 dark:text-night-200">{{ auction.price | currency }}</span>
-  </td>
-  <td class="py-2 pl-2 text-left">
+  <!-- <td class="py-2 pl-2 text-left">
+    <span class="text-sm font-semibold text-gray-400 dark:text-night-200">{{ lodge.price | currency }}</span>
+  </td> -->
+  <!-- <td class="py-2 pl-2 text-left">
     <!-- <div class="ml-4 flex items-center justify-start">
-          <img [src]="auction.avatar" class="mr-3 h-8 w-8 rounded-b-md" alt="" />
-      </div> -->
-    <span class="text-sm font-semibold text-gray-400 dark:text-night-200">{{ auction.last_bid }} ETH</span>
-  </td>
+          <img [src]="lodge.avatar" class="mr-3 h-8 w-8 rounded-b-md" alt="" />
+      </div> --
+    <span class="text-sm font-semibold text-gray-400 dark:text-night-200">{{ lodge.last_bid }} ETH</span>
+  </td> -->
  
   <td class="py-2 pl-2 text-left">
     <div class="flex justify-end">
